[package]
name = "xors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "filter_utils"
path = "src/filter_utils.rs"

[[bin]]
name = "xors"
path = "src/main.rs"

[dependencies]
num = "0.4.0"
plotly = "0.8.3"
rustfft = "6.1.0"
